--- a/lightblue-ldap-crud/pom.xml
+++ b/lightblue-ldap-crud/pom.xml
@@ -29,6 +29,7 @@
     </parent>
     
     <artifactId>lightblue-ldap-crud</artifactId>
+    <version>1.8.0-SNAPSHOT</version>
     
     <dependencies>
         <dependency>
