--- a/lightblue-ldap-metadata/pom.xml
+++ b/lightblue-ldap-metadata/pom.xml
@@ -29,6 +29,7 @@
     </parent>
 
     <artifactId>lightblue-ldap-metadata</artifactId>
+    <version>1.8.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
