--- a/lightblue-ldap-test/pom.xml
+++ b/lightblue-ldap-test/pom.xml
@@ -28,6 +28,7 @@
     </parent>
     
     <artifactId>lightblue-ldap-test</artifactId>
+    <version>1.8.0-SNAPSHOT</version>
     
     <dependencies>
         <dependency>
