--- a/lightblue-ldap-config/pom.xml
+++ b/lightblue-ldap-config/pom.xml
@@ -57,4 +57,50 @@
        </dependency>
     </dependencies>
     
+    <build>
+        <plugins>
+            <!-- RPM packing -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>rpm-maven-plugin</artifactId>
+                <version>2.1.4</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>attached-rpm</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <name>${project.artifactId}</name>
+                    <copyright>Red Hat</copyright>
+                    <distribution>RHEL</distribution>
+                    <group>Lightblue Platform</group>
+                    <packager>${user.name}</packager>
+                    <defaultFilemode>744</defaultFilemode>
+                    <defaultUsername>jboss</defaultUsername>
+                    <defaultGroupname>jboss</defaultGroupname>
+                    <mappings>
+                        <mapping>
+                            <directory>${rpm.install.basedir}</directory>
+                            <directoryIncluded>false</directoryIncluded>
+                            <sources>
+                                <source>
+                                    <location>target/lightblue-ldap-${project.version}.${project.packaging}</location>
+                                </source>
+                            </sources>
+                            <dependency>
+                              <includes>
+                                <include>com.redhat.lightblue.ldap:*</include>
+                                <include>com.unboundid:unboundid-ldapsdk</include>
+                              </includes>
+                            </dependency>
+                        </mapping>
+                    </mappings>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
 </project>
