--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,8 @@
         <sonar.jdbc.password>sonar</sonar.jdbc.password>
         <sonar.host.url>http://127.0.0.1:8080</sonar.host.url>
         <sonar.projectName>lightblue-ldap</sonar.projectName>
+        
+        <rpm.install.basedir>/usr/share/java/lightblue/lightblue-ldap</rpm.install.basedir>
 
         <lightblue.core.version>1.11.0-SNAPSHOT</lightblue.core.version>
         <lightblue.mongo.version>1.11.0-SNAPSHOT</lightblue.mongo.version>
