--- a/lightblue-ldap-config/pom.xml
+++ b/lightblue-ldap-config/pom.xml
@@ -73,7 +73,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <name>${project.artifactId}</name>
+                    <name>${rpm.name}</name>
                     <copyright>Red Hat</copyright>
                     <distribution>RHEL</distribution>
                     <group>Lightblue Platform</group>
@@ -87,7 +87,7 @@
                             <directoryIncluded>false</directoryIncluded>
                             <sources>
                                 <source>
-                                    <location>target/lightblue-ldap-${project.version}.${project.packaging}</location>
+                                    <location>target/${project.artifactId}-${project.version}.${project.packaging}</location>
                                 </source>
                             </sources>
                             <dependency>
