--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <sonar.host.url>http://127.0.0.1:8080</sonar.host.url>
         <sonar.projectName>lightblue-ldap</sonar.projectName>
         
+        <rpm.name>lightblue-ldap</rpm.name>
         <rpm.install.basedir>/usr/share/java/lightblue/lightblue-ldap</rpm.install.basedir>
 
         <lightblue.core.version>1.11.0-SNAPSHOT</lightblue.core.version>
