--- a/lightblue-ldap-integration-test/pom.xml
+++ b/lightblue-ldap-integration-test/pom.xml
@@ -25,11 +25,11 @@
     <parent>
         <groupId>com.redhat.lightblue.ldap</groupId>
         <artifactId>lightblue-ldap-pom</artifactId>
-        <version>1.9.0</version>
+        <version>1.10.0-SNAPSHOT</version>
     </parent>
     
     <artifactId>lightblue-ldap-integration-test</artifactId>
-    <version>1.9.0</version>
+    <version>1.10.0-SNAPSHOT</version>
     
     <dependencies>
         <dependency>
