--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
         <rpm.name>lightblue-ldap</rpm.name>
         <rpm.install.basedir>/usr/share/java/lightblue/lightblue-ldap</rpm.install.basedir>
 
-        <lightblue.core.version>2.3.0-SNAPSHOT</lightblue.core.version>
-        <lightblue.mongo.version>1.21.0-SNAPSHOT</lightblue.mongo.version>
+        <lightblue.core.version>2.3.0</lightblue.core.version>
+        <lightblue.mongo.version>1.20.0</lightblue.mongo.version>
     </properties>
     
     <modules>
