--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <groupId>com.redhat.lightblue.ldap</groupId>
     <artifactId>lightblue-ldap-pom</artifactId>
     <name>lightblue-ldap: ${project.groupId}|${project.artifactId}</name>
-    <version>1.11.0</version>
+    <version>1.12.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Lightblue LDAP implementation</description>
     
@@ -51,7 +51,7 @@
         <connection>scm:git:https://github.com/lightblue-platform/lightblue-ldap.git</connection>
         <developerConnection>scm:git:git@github.com:lightblue-platform/lightblue-ldap.git</developerConnection>
         <url>https://github.com/lightblue-platform/lightblue-ldap</url>
-        <tag>V1.11.0</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <distributionManagement>
