--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
         <rpm.name>lightblue-ldap</rpm.name>
         <rpm.install.basedir>/usr/share/java/lightblue/lightblue-ldap</rpm.install.basedir>
 
-        <lightblue.core.version>2.6.0</lightblue.core.version>
-        <lightblue.mongo.version>1.25.0</lightblue.mongo.version>
+        <lightblue.core.version>2.7.0-SNAPSHOT</lightblue.core.version>
+        <lightblue.mongo.version>1.26.0-SNAPSHOT</lightblue.mongo.version>
     </properties>
     
     <modules>
